--- a/src/blog.njk
+++ b/src/blog.njk
@@ -7,7 +7,7 @@ layout: 'base.njk'
 
        
 <div class="section container">
-  <h1 class="section-title">Recent articles</h1>
+  <h1 class="section-title">Articulos Recientes</h1>
 
   <ul role="list" class="articles__list flow">
 
